<resources>

    <!-- Text for the LoginActivity-->
    <string name="app_name">BYTC</string>
    <string name="userNameEditTextHint">Username</string>
    <string name="passwordEditTextHint">Password</string>
    <string name="forgotPasswordText">Forgot Password?</string>
    <string name="loginButtonText">Login</string>
    <string name="createNewAccountButtonText">Create a New Account</string>

    <!-- Text for the  CreateAccountOptionsActivity-->
    <string name="registerSchoolOptionText">Register My School</string>
    <string name="registerParentOptionText">I Am A Parent</string>
    <string name="registerTeacherOptionText">I Am A Teacher</string>

    <!-- Text for the ParentSignUpActivity-->
    <string name="parentSignUpActivityTitle"><u>Parent SignUp:</u></string>
    <string name="parentPhoneNumberTextView">Phone Number:</string>

    <!-- Generic Password and Registration Text-->
    <string name="createPasswordTextView">Password:</string>
    <string name="createPasswordMinimumLengthText">Minimum of 6 characters</string>
    <string name="enterPasswordAgainTextView">Re-Enter Password:</string>
    <string name="passwordRequirementsTextView">
        \u2022 Must include at least one capitol letter.
        \n\u2022 Must include at least one number.
    </string>
    <string name="registerButtonText"><b>Register!</b></string>
    <string name="enterEmailTextView">Email:</string>
    <string name="enterNameTextView">Your Name:</string>

    <!-- Text for the addChildActivity-->
    <string name="addChildActivityTitle"><u>Add A Child:</u></string>
    <string name="childNameTextView">Child\'s Name:</string>
    <string name="childGradeTextView">Grade:</string>
    <string name="childLexileNumberTextView">Lexile Number:</string>
    <string name="lexileNumberExplanationTextView"><u>What is a lexile number?</u></string>
    <string name="createStudentUserNameTextView">Create Student Username:</string>

    <!-- HomeScreen Text-->
    <string name="statsTitle">Stats</string>
    <string name="currentBookHeader">Your Current Book:</string>
    <string name="bookCoverContentDescription">Book Cover Art</string>
    <string name="lexileLevelLabel">Lexile Level:</string>
    <string name="titleLabel">Title:</string>
    <string name="authorLabel">Author:</string>
    <string name="descriptionLabel">Description:</string>

    <string name="currentBookLexileLevel">970L</string>
    <string name="currentBookImageLink">
        https://en.wikipedia.org/wiki/File:Houghton_AC85_B9345_911s_-_Secret_Garden,_1911_-_cover.jpg
    </string>
    <string name="currentBookTitle">The Secret Garden</string>
    <string name="currentBookAuthor">Frances Hodgson Burnett</string>
    <string name="currentBookDescription">
        Ten-year-old Mary comes to live in a lonely house on the Yorkshire moors and discovers an
        invalid cousin and the mysteries of a locked garden.
    </string>

    <!-- Library Text-->
    <string name="bookCardDescription">Book Details</string>
    <string name="currentBookLabel">Currently Reading:</string>

    <!-- logout text-->
    <string name="logoutText"><b>Logout</b></string>


    <string name="scheduleTodayText"><b>Today:</b></string>
    <string name="twopm">2 PM:</string>
    <string name="name1">Harris, Kingston</string>
    <string name="threepm">3 PM:</string>
    <string name="name2">Parker, Tory</string>
    <string name="fourpm">4 PM:</string>
    <string name="name3">Hall, Dave</string>
    <string name="fivepm">5 PM:</string>
    <string name="name4">Sheats, Riley</string>
    <string name="allottedTimeText"><b>30 Min.</b></string>


    <string name="dateForStatsText"><u>Date:</u></string>
    <string name="titleForStatsText"><u>Title:</u></string>
    <string name="minRecordedForStatsText"><u>Min Rec.</u></string>

    <string name="exampleDateText">11/19/17</string>
    <string name="exampleBookTitle">The Secret Garden</string>
    <string name="exampleTimeReading">30 Minutes</string>



</resources>
