<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="us.bytc.beyondtheclassroom.UserLoginActivity"
    >


    <!--Company Logo at the top of the screen-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/btc_logo"
        android:contentDescription="@string/app_name"
        android:id="@+id/companyLogoInLogin"
        />

    <!-- Linear Layout that contains the main user interface for logging in and keeps these views
         in the center of the parent vertically and sets it below the company logo-->
    <LinearLayout
        android:id="@+id/loginParentLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/companyLogoInLogin"
        android:layout_centerInParent="true"
        >

        <!-- The user types in there username to log into the database; sets the hint text, the
             user input and the line below to black-->
        <EditText
            android:id="@+id/loginUserNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userNameEditTextHint"
            android:layout_margin="6dp"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/black"
            android:textColorHint="@android:color/black"
            android:drawableLeft="@drawable/login_username_image"/>

        <!-- The user types in there password associated with there username to access there
             personal items from the database; sets the hint text, the user input and the line
             below to black-->
        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordEditTextHint"
            android:inputType="textPassword"
            android:layout_margin="6dp"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/black"
            android:textColorHint="@android:color/black"
            android:drawableLeft="@drawable/login_password_image"/>

        <!-- Linear Layout that holds the forgot password button and login button in a horizontal
             orientation-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:orientation="horizontal">

            <!-- TextView that will go to a support page to recover a user's password if the text
                 is clicked; sets the color to a light blue-->
            <TextView
                android:id="@+id/userForgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:text="@string/forgotPasswordText"
                android:textColor="#208dd6" />

            <!-- Button that when clicked sends the user to their specific home screen; uses a custom
                 background shape in the drawable folder-->
            <Button
                android:id="@+id/userLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/loginButtonText"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

    <!-- If the user does not have an account then they click this and it will take them to a
         screen where they can sign up; uses custom background file in the drawable for the border-->
    <Button
        android:id="@+id/createNewUserAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="84dp"
        android:background="@drawable/roundedborderedbutton"
        android:text="@string/createNewAccountButtonText"
        android:padding="12dp"
        />
</RelativeLayout>
