<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="us.bytc.beyondtheclassroom.CreateAccountOptionsActivity">

    <!--Company Logo at the top of the screen-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/btc_logo"
        android:contentDescription="@string/app_name"
        android:id="@+id/companyLogoInSignUp"
        />

    <!-- Linear Layout that contains the main user interface for logging in and keeps these views
         in the center of the parent vertically and sets it below the company logo-->
    <LinearLayout
        android:id="@+id/SignUpOptionsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/companyLogoInSignUp"
        android:layout_centerInParent="true"
        android:padding="12dp"
        >

        <!-- Schools use this to register a school for payment for students; uses custom background
             from drawable folder and margin for spacing and visual benefits-->
        <Button
            android:id="@+id/registerSchoolButtonOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerSchoolOptionText"
            android:textColor="@android:color/white"
            android:background="@drawable/roundedbutton"
            android:layout_margin="24dp"/>

        <!-- Parents use this to register themselves and register a student; uses custom background
             from drawable folder and margin for spacing and visual benefits-->
        <Button
            android:id="@+id/registerParentButtonOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerParentOptionText"
            android:textColor="@android:color/white"
            android:background="@drawable/roundedbutton"
            android:layout_margin="24dp"
            />

        <!-- Teachers use this to register themselves as teachers to get paid for teachign students;
             uses custom background from drawable folder and margin for spacing and visual benefits-->
        <Button
            android:id="@+id/registerTeacherButtonOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerTeacherOptionText"
            android:textColor="@android:color/white"
            android:background="@drawable/roundedbutton"
            android:layout_margin="24dp"
            />

    </LinearLayout>


</RelativeLayout>
