<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="us.bytc.beyondtheclassroom.MoreScreenActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/btc_logo"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"/>

        <!-- Place cardviews here-->


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logoutText"
        android:background="@drawable/roundedborderedbutton"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:id="@+id/logoutButton"
        android:layout_above="@id/bottomNavigationBar"
        android:layout_centerInParent="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="#d1d3d4"
        android:id="@+id/bottomNavigationBar">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/stats_logo"
            android:contentDescription="@string/statsTitle"/>

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/schedule_logo"
            android:contentDescription="@string/statsTitle"/>

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/read_logo"
            android:contentDescription="@string/statsTitle"/>

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/library_logo"
            android:contentDescription="@string/statsTitle"/>

        <ImageView
            android:id="@+id/homeScreenMoreButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/more_logo"
            android:contentDescription="@string/statsTitle"/>

    </LinearLayout>

</RelativeLayout>
